<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.microsoft.azure.functions</groupId>
  <artifactId>azure-functions-java-worker</artifactId>
  <version>2.13.0</version>
  <packaging>jar</packaging>
  <name>Azure Functions Java Worker</name>
  <description>This package contains the Java Language Worker used by Azure functions host to execute java functions</description>
  <url>https://azure.microsoft.com/en-us/services/functions</url>
  <organization>
    <name>Microsoft Azure</name>
    <url>https://azure.microsoft.com</url>
  </organization>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <azure.functions.java.core.library.version>1.2.0</azure.functions.java.core.library.version>
    <azure.functions.java.spi>1.0.0</azure.functions.java.spi>
    <azure.functions.java.library.version>2.2.0</azure.functions.java.library.version>
    <jupiter.version>5.9.1</jupiter.version>
    <mockito-core.version>4.11.0</mockito-core.version>
  </properties>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:https://github.com/Azure/azure-functions-java-worker</connection>
    <developerConnection>scm:git:git@github.com:Azure/azure-functions-java-worker</developerConnection>
    <url>https://github.com/Azure/azure-functions-java-worker</url>
    <tag>HEAD</tag>
  </scm>
  <developers>
    <developer>
      <id>microsoft</id>
      <name>Microsoft Corporation</name>
    </developer>
  </developers>
  <repositories>
    <repository>
      <id>maven.snapshots</id>
      <name>Maven Central Snapshot Repository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>com.microsoft.azure.functions</groupId>
      <artifactId>azure-functions-java-core-library</artifactId>
      <version>${azure.functions.java.core.library.version}</version>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure.functions</groupId>
      <artifactId>azure-functions-java-spi</artifactId>
      <version>${azure.functions.java.spi}</version>
    </dependency>
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>3.19.6</version>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-protobuf</artifactId>
      <version>1.57.2</version>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-stub</artifactId>
      <version>1.45.2</version>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-netty-shaded</artifactId>
      <version>1.45.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.9.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.9</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.5.0</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
      <groupId>com.microsoft.azure.functions</groupId>
      <artifactId>azure-functions-java-library</artifactId>
      <version>${azure.functions.java.library.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito-core.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <extensions>
      <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>1.5.0.Final</version>
      </extension>
    </extensions>
    <plugins>
      <!-- This plugin generates Java source files from .proto files -->
      <plugin>
        <groupId>org.xolstice.maven.plugins</groupId>
        <artifactId>protobuf-maven-plugin</artifactId>
        <version>0.5.1</version>
        <configuration>
          <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
          <pluginId>grpc-java</pluginId>
          <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.6.1:exe:${os.detected.classifier}</pluginArtifact>
          <protoSourceRoot>${basedir}/src/main/azure-functions-language-worker-protobuf/src/proto</protoSourceRoot>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>compile-custom</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- This plugin enforces that maven plugin must above 3.2.0 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.2.0</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- This plugin configures the basic requirements for compilation -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <!-- This plugin is used to shaded jars -->
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.microsoft.azure.functions.worker.Application</mainClass>
                  <manifestEntries>
                    <Implementation-Title>${project.name}</Implementation-Title>
                    <Implementation-Version>${project.version}</Implementation-Version>
                    <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                    <Add-Opens>java.base/java.lang java.base/java.util</Add-Opens>
                  </manifestEntries>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
              </transformers>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
              <relocations>
                <relocation combine.children="append">
                  <pattern>com.google</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.com.google</shadedPattern>
                  <excludes>
                    <exclude>com/google/gson/**</exclude>
                  </excludes>
                </relocation>
                <relocation combine.children="append">
                  <pattern>com.sun</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.com.sun</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>android</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.android</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>google</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.google</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>identity</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.identity</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>shared</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.shared</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>org</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.org</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>io.netty</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.io.netty</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>io.perfmark</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.io.perfmark</shadedPattern>
                </relocation>
                <relocation combine.children="append">
                  <pattern>io.grpc</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.io.grpc</shadedPattern>
                  <excludes>
                    <exclude>io.grpc.netty.shaded.io.grpc.netty.*</exclude>
                  </excludes>
                </relocation>
                <relocation>
                  <pattern>io.grpc.netty.shaded.io.grpc.netty</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.io.grpc.netty.shaded.io.grpc.netty</shadedPattern>
                  <includes>
                    <include>io.grpc.netty.shaded.io.grpc.netty.*</include>
                  </includes>
                </relocation>
                <relocation combine.children="append">
                  <pattern>javax.annotation</pattern>
                  <shadedPattern>com.microsoft.azure.functions.shaded.javax.annotation</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- This plugin is used to generated test jar which contains all test classes -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <executions>
          <execution>
            <phase>test-compile</phase>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <workingDirectory>${project.build.directory}</workingDirectory>
          <systemProperties>
            <property>
              <name>testing-project-jar</name>
              <value>${project.artifactId}-${project.version}-tests.jar</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>